--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -1,5 +1,4 @@
 .Overview {
-    flex: 1;
     top: 0px;
     height: 100vh;
     width: 30%;
@@ -8,6 +7,7 @@
     color: aliceblue;
     padding-left: 100px;
     padding-top: 100px;
+    position: fixed;
 }
 
 .Name {
