--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -1,55 +1,57 @@
 .Overview {
-    top: 0px;
-    height: 100vh;
-    width: 30%;
-    border-width: 1px;
-    border-style: solid;
-    color: aliceblue;
-    padding-left: 100px;
-    padding-top: 100px;
-    position: fixed;
+  top: 0px;
+  height: 100vh;
+  width: 30%;
+  padding-left: 100px;
+  padding-top: 100px;
+  position: fixed;
+}
+
+.active {
+  color: pink;
 }
 
 .Name {
-    font-size: 3rem;
-    font-weight: bold;
-    padding-bottom: 0px;
+  font-size: 3rem;
+  font-weight: bold;
+  padding-bottom: 0px;
 }
 
 .Role {
-    font-size: 1.5rem;
-    font-weight: 500;
-    padding: 17px 0;
-    color: #d3d7ed;
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding: 17px 0;
+  color: #d3d7ed;
 }
 
 .Descrip {
-    color: #b2baed;
-    padding-bottom: 100px;
+  color: #b2baed;
+  padding-bottom: 100px;
 }
 
 .Menu {
-    display: grid;
-    width: 350px;
-    padding-bottom: 100px;
+  display: grid;
+  width: 350px;
+  padding-bottom: 100px;
+  text-decoration: none;
 }
 
 .AboutSelect,
 .ExpSelect,
 .ProjectsSelect {
-    text-transform: uppercase;
-    font-weight: 500;
-    padding-bottom: 40px;
-    color: #d3d6e6;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding-bottom: 40px;
+  color: #d3d6e6;
 }
 
 .AboutSelect:hover,
 .ExpSelect:hover,
 .ProjectsSelect:hover {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .Icons {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
