fixed right side formatting

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,4 +1,6 @@
 .AboutMe {
     color:#c6d5f5;
-    padding: 70px 80px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 70px;
 }
