--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,6 +1,6 @@
 .AboutMe {
-    color:#c6d5f5;
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-top: 70px;
+  color: #95aad2;
+  padding-left: 50px;
+  padding-right: 300px;
+  padding-top: 70px;
 }
