--- a/src/components/Experiences.module.css
+++ b/src/components/Experiences.module.css
@@ -1,27 +1,33 @@
 .ExpContainer {
   padding-top: 80px;
   padding-left:50px;
+  padding-right:50px;
   border-width: 1px;
   border-style: solid;
   border-color: green;
 }
 
 .Item {
-  width:700px;
-  padding-bottom: 50px;
+  width:750px;
+  padding-top: 25px;
+  padding-bottom: 40px;
   border-width: 1px;
   border-style: solid;
   border-color: rgb(97, 130, 97);
   display: flex;
+  transition: background-color 0.3s ease;
+  border-radius: 10px;
 }
 
 .Item:hover {
   cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .ItemDate {
+  padding-left: 15px;
   min-width: 150px;
-  margin-right: 20px;
+  margin-right: 10px;
   color: #6378a0;
   font-weight: bold;
 }
@@ -32,8 +38,13 @@
   font-size: 17px;
 }
 
+.Item:hover .ItemPosition {
+  color:#72d4d6;
+}
+
 .ItemBody {
   color: #8d9bb8;
+  padding-right: 30px;
 }
 
 .TechList {
@@ -42,11 +53,11 @@
 }
 
 .TechStack {
-  margin-right: 15px;
+  margin-right: 10px;
   color: #72d4d6;
   background-color: #193346;
   padding: 6px 14px;
   font-size: 15px;
   border-radius: 40px;
-  font-weight: bold;
+  font-weight:  600;
 }
