--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -7,14 +7,11 @@
   position: fixed;
 }
 
-.active {
-  color: pink;
-}
-
 .Name {
   font-size: 3rem;
   font-weight: bold;
   padding-bottom: 0px;
+  color: #c6d2ed;
 }
 
 .Role {
