cleaned up borders

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,8 +1,8 @@
 .AboutMe {
   color: #95aad2;
-  padding-left: 50px;
-  padding-right: 300px;
+  padding-left: 60px;
+  padding-right: 350px;
   padding-top: 70px;
-  border: #95aad2 solid 1px;
   margin-top: 0px;
+  font-size: 18px;
 }
