--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -6,3 +6,14 @@
   margin-top: 0px;
   font-size: 18px;
 }
+
+.Highlight {
+  display: inline;
+  color: rgb(220, 220, 255);
+  transition: color .4s ease;
+}
+
+.Highlight:hover {
+  color: #72d4d6;
+  cursor: pointer;
+}
