--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -51,5 +51,13 @@
 
 .Icons {
   display: flex;
-  gap: 10px;
+  gap: 15px;
+}
+
+.Icons a {
+  transition: transform 0.4s ease-in-out;
+}
+
+.Icons a:hover {
+  transform: scale(1.5);
 }
