fixed formatting and worked on mobile media query

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,16 @@
 }
 
 .Website {
+  display: flex;
   background-color: #10162c;
   background-size: cover;
-  display: flex;
+}
+
+@media screen and (max-width: 600px) {
+  .Website {
+    background-color: #10162c;
+    background-size: cover;
+    display: grid;
+    width: 100%;
+  }
 }
