--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -3,3 +3,11 @@
   color: #72d4d6;
   font-size: 100px;
 }
+
+@media screen and (max-width: 600px) {
+  .ProjectContainer {
+    height: 1000px;
+    color: #72d4d6;
+    font-size: 25px;
+  }
+}
