--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -7,14 +7,6 @@
   position: fixed;
 }
 
-@media screen and (max-width: 600px) {
-  .Overview {
-    width: 100%;
-    position: relative;
-    border: #b2baed 1px solid;
-  }
-}
-
 .Name {
   font-size: 3rem;
   font-weight: bold;
@@ -88,4 +80,19 @@ li {
 
 a {
   text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+  .Overview {
+    width: 100%;
+    position: relative;
+    border: #b2baed 1px solid;
+  }
+
+  .Name {
+    font-size: 3rem;
+    font-weight: bold;
+    padding-bottom: 0px;
+    color: #c6d2ed;
+  }
 }
