--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,13 +1,13 @@
 .ProjectContainer {
-  height: 1000px;
-  color: #72d4d6;
-  font-size: 100px;
+    height: 62.5rem;
+    color: #72d4d6;
+    font-size: 6.25rem;
 }
 
-@media screen and (max-width: 600px) {
-  .ProjectContainer {
-    height: 1000px;
-    color: #72d4d6;
-    font-size: 25px;
-  }
+@media screen and (max-width: 700px) {
+    .ProjectContainer {
+        height: 62.5rem;
+        color: #72d4d6;
+        font-size: 1.5625rem;
+    }
 }
