--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,19 +1,19 @@
 .AboutMe {
-  color: #95aad2;
-  padding-left: 60px;
-  padding-right: 350px;
-  padding-top: 70px;
-  margin-top: 0px;
-  font-size: 18px;
+    color: #95aad2;
+    padding-left: 3.75rem;
+    padding-right: 21.875rem;
+    padding-top: 4.375rem;
+    margin-top: 0rem;
+    font-size: 1.125rem;
 }
 
 .Highlight {
-  display: inline;
-  color: rgb(220, 220, 255);
-  transition: color .4s ease;
+    display: inline;
+    color: rgb(220, 220, 255);
+    transition: color 0.4s ease;
 }
 
 .Highlight:hover {
-  color: #72d4d6;
-  cursor: pointer;
+    color: #72d4d6;
+    cursor: pointer;
 }
