--- a/src/components/Experiences.module.css
+++ b/src/components/Experiences.module.css
@@ -1,25 +1,25 @@
 .ExpContainer {
-    padding-top: 80px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-top: 5rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
 
 .Item {
-  width: 750px;
-  padding-top: 25px;
-  padding-bottom: 40px;
-  display: flex;
-  border-radius: 15px;
-  transition: background-color 0.3s ease;
+    width: 47rem;
+    padding-top: 1.5rem;
+    padding-bottom: 2.5rem;
+    display: flex;
+    border-radius: 0.94rem;
+    transition: background-color 0.3s ease;
 }
 
-@media screen and (max-width: 600px) {
-  .Item {
-    padding-top: 25px;
-    padding-bottom: 40px;
-    display: block;
-    transition: background-color 0.3s ease;
-  }
+@media screen and (max-width: 700px) {
+    .Item {
+        padding-top: 1.56rem;
+        padding-bottom: 2.5rem;
+        display: block;
+        transition: background-color 0.3s ease;
+    }
 }
 
 .Item:hover {
@@ -28,24 +28,24 @@
 }
 
 .ItemDate {
-    padding-left: 15px;
-    min-width: 150px;
-    margin-right: 10px;
+    padding-left: 0.94rem;
+    min-width: 9.4rem;
+    margin-right: 0.63rem;
     color: #6378a0;
     font-weight: bold;
 }
 
-@media screen and (max-width: 600px) {
-  .ItemDate {
-    padding-left: 0px;
-    margin-bottom: 15px;
-  }
+@media screen and (max-width: 700px) {
+    .ItemDate {
+        padding-left: 0rem;
+        margin-bottom: 0.94rem;
+    }
 }
 
 .ItemPosition {
     color: #b9c2dc;
     font-weight: 600;
-    font-size: 17px;
+    font-size: 1rem;
 }
 
 .Item:hover .ItemPosition {
@@ -54,26 +54,26 @@
 
 .ItemBody {
     color: #8d9bb8;
-    padding-right: 30px;
+    padding-right: 1.875rem;
 }
 
-@media screen and (max-width: 600px) {
-  .ItemBody {
-    padding-right: 300px;
-  }
+@media screen and (max-width: 700px) {
+    .ItemBody {
+        padding-right: 18.75rem;
+    }
 }
 
 .TechList {
-    padding-top: 20px;
+    padding-top: 1.25rem;
     display: flex;
 }
 
 .TechStack {
-    margin-right: 10px;
+    margin-right: 0.625rem;
     color: #72d4d6;
     background-color: #193346;
-    padding: 6px 14px;
-    font-size: 15px;
-    border-radius: 40px;
+    padding: 0.375rem 0.875rem;
+    font-size: 0.94rem;
+    border-radius: 2.5rem;
     font-weight: 600;
 }
