--- a/src/components/Info.module.css
+++ b/src/components/Info.module.css
@@ -1,11 +1,11 @@
 .InfoContainer {
-  padding-left: 37vw;
-  scroll-behavior: smooth;
-  margin-top: 0px;
+    padding-left: 37vw;
+    scroll-behavior: smooth;
+    margin-top: 0rem;
 }
 
-@media screen and (max-width: 600px) {
-  .InfoContainer {
-    padding-left: 0px;
-  }
+@media screen and (max-width: 700px) {
+    .InfoContainer {
+        padding-left: 0rem;
+    }
 }
