--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -1,98 +1,98 @@
 .Overview {
-  top: 0px;
-  height: 100vh;
-  width: 30%;
-  padding-left: 100px;
-  padding-top: 100px;
-  position: fixed;
+    top: 0px;
+    height: 100vh;
+    width: 30%;
+    padding-left: 6.25rem;
+    padding-top: 6.25rem;
+    position: fixed;
 }
 
 .Name {
-  font-size: 3rem;
-  font-weight: bold;
-  padding-bottom: 0px;
-  color: #c6d2ed;
+    font-size: 3rem;
+    font-weight: bold;
+    padding-bottom: 0rem;
+    color: #c6d2ed;
 }
 
 .Role {
-  font-size: 1.5rem;
-  font-weight: 500;
-  padding: 17px 0;
-  color: #d3d7ed;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding: 1.0625rem 0rem;
+    color: #d3d7ed;
 }
 
 .Descrip {
-  color: #b2baed;
-  padding-bottom: 100px;
+    color: #b2baed;
+    padding-bottom: 6.25rem;
 }
 
 .Menu {
-  display: grid;
-  width: 350px;
-  padding-bottom: 100px;
-  text-decoration: none;
+    display: grid;
+    width: 21.875rem;
+    padding-bottom: 6.25rem;
+    text-decoration: none;
 }
 
 .AboutSelect,
 .ExpSelect,
 .ProjectsSelect {
-  text-transform: uppercase;
-  font-weight: 500;
-  padding-bottom: 40px;
-  color: #d3d6e6;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding-bottom: 2.5rem;
+    color: #d3d6e6;
 }
 
 .AboutSelect:hover,
 .ExpSelect:hover,
 .ProjectsSelect:hover {
-  color: #ffffff;
-  cursor: pointer;
+    color: #ffffff;
+    cursor: pointer;
 }
 
 .Icons {
-  display: flex;
-  gap: 15px;
+    display: flex;
+    gap: 0.9375rem;
 }
 
 .Icons a img {
-  display: inline-block;
-  transition: transform 0.4s ease-in-out;
+    display: inline-block;
+    transition: transform 0.4s ease-in-out;
 }
 
 .Icons a:hover img {
-  transform: scale(1.5);
+    transform: scale(1.5);
 }
 
 .DropDown {
-  padding-left: 0px;
-  text-decoration: none;
+    padding-left: 0rem;
+    text-decoration: none;
 }
 
 li {
-  text-decoration: none;
-  padding: 15px 20px;
-  list-style-type: none;
-  color: #e5ecff;
-  background-color: rgb(44, 62, 94);
-  border-radius: 15px;
-  margin-bottom: 15px;
+    text-decoration: none;
+    padding: 0.9375rem 1.25rem;
+    list-style-type: none;
+    color: #e5ecff;
+    background-color: rgb(44, 62, 94);
+    border-radius: 0.9375rem;
+    margin-bottom: 0.9375rem;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
-@media screen and (max-width: 600px) {
-  .Overview {
-    width: 100%;
-    position: relative;
-    border: #b2baed 1px solid;
-  }
+@media screen and (max-width: 700px) {
+    .Overview {
+        width: 100%;
+        position: relative;
+        border: #b2baed 0.0625rem solid;
+    }
 
-  .Name {
-    font-size: 3rem;
-    font-weight: bold;
-    padding-bottom: 0px;
-    color: #c6d2ed;
-  }
+    .Name {
+        font-size: 3rem;
+        font-weight: bold;
+        padding-bottom: 0rem;
+        color: #c6d2ed;
+    }
 }
